--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <main>
  <div class="hellp" id="history"></div>
+ <h1></h1>
 	<h1 title="We love Ukraine!">История Карпат</h1>
 	<p class="maintext" > 
 	&nbsp &nbsp По археологическим данным, на территории Закарпатья уже  в начале нашей эры жили племена так называемой культуры полей погребений — предки летописных восточнославянских племен. Разложение первобытно-общинного строя и дальнейшее развитие земледелия и скотоводства привели, как свидетельствуют летописи, к возникновению у восточных славян полугосударственных объединений. Они <span class="mark"> занимали большую часть Восточной Европы</span>. Карпаты заселяло восточнославянское племя белых хорватов. В X—XI столетиях территория Закарпатья входила в состав Киевской Руси; в конце XI века она подпала под власть венгерских феодалов.
@@ -114,7 +115,22 @@
 
 	<div class="button">
 		<a href="#begin">В начало</a>
-	</div>
+
+<div class="droplink">
+ 
+    <ul>
+      <li><a href="#history" target="_blank">История</a></li>
+      <li><a href="#map" target="_blank">Kарта</a></li>
+      <li><a href="#iskystvo" target="_blank">Искуство</a></li>
+      <li><a href="#bukovel" target="_blank">Буковель</a></li>
+      <li><a href="#photo" target="_blank">Фото</a></li>
+	  </ul>
+
+
+
+</div>
+</div>
+	
 
 </body>
 </html>
